    containing a large number of clauses for the same predicate.

    Improved portability of calls from within objects and categories of calls
    to Prolog database and reflection built-in predicates whenever the first
    argument is an explicit module-qualified term.

    Turning on the "smart_compilation" compiler flag will now automatically
    switch off the "clean" flag.

    Reimplemented the predicate_property/2 built-in method in order to make
    it deterministic for most calls where the second argument is bound.

    For all config files, renamed the predicate '$lgt_is_proper_list'/1 to
    '$lgt_is_list'/1 and and replaced the old '$lgt_is_list'/1 predicate by
    a new '$lgt_is_list_or_partial_list'/1 predicate.

    Updated the SWI-Prolog config file in order to delete QLF files when the
    "clean" flag is "on" and to avoid preventing loading of a Logtalk source
    file when a Prolog file with the same name exists on the same lookup
    directory. In addition, add source location information to the generated
    Prolog files resulting from the compilation of Logtalk source files. This
    location information is necessary for supporting some of the SWI-Prolog
    development tools.

    Updated the SWI-Prolog integration files in order to hide the source code
    of the Logtalk (::)/2 and (<<)/2 built-in predicates from this compiler
    debugging tools.

    Updated the SWI-Prolog hooks file in order to support tracing Logtalk
    source code using the SWI-Prolog graphical debugger and using the edit/1
    predicate with library notation and with the Logtalk "altdirs" flag on.

    Updated the ECLiPSe config file, simplifying some of the file handling
    predicates, turning off ISO overly restrictions on operator usage, and
    making use of the recently implemented call/N built-in control constructs
    when available.

    Updated the GNU Prolog config file for the stable 1.4.0 release.
